# allexanderbm_webm

./: .gitignore  CMakeLists.txt
WebsiteABM/: CMakeLists.txt
WebsiteABM/WebsiteABM/: CMakeLists.txt  WebsiteABM.cpp  WebsiteABM.h
data/: modules.json  portfolio.json
enc_temp_folder/e388965c7df37eb412db99e6fe9acb3d/: main.cpp
public/: index.html
src/: ccss.cpp  ccss.hpp  file_util.cpp  file_util.hpp  http.cpp  http.hpp  logger.cpp  logger.hpp  main.cpp  module.cpp  module.hpp  router.cpp  router.hpp  server.cpp  server.hpp  template.cpp  template.hpp
src/modules/: admin.cpp  admin.hpp  health.cpp  health.hpp  portfolio.cpp  portfolio.hpp
styles/: main.ccss  variables.ccss
templates/: index.html  portfolio.html  portfolio_item.html
